--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# IDE Files
+.idea/
+
+# Terraform Files
+.terraform
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+
+# Ignore Env files
+data-collection/.env
