--- a/01-data-collection-app/.env.example
+++ b/01-data-collection-app/.env.example
@@ -1,5 +1,6 @@
-TWITTER_TOKEN=
-ENV=LOCAL
-AWS_PROFILE=
-AWS_ASSUME_ROLE=
-KINESIS_FIREHOSE_NAME=
+export TWITTER_TOKEN=
+export ENV=LOCAL
+export AWS_PROFILE=
+export AWS_ASSUME_ROLE=
+export KINESIS_FIREHOSE_NAME=
+export KINESIS_DATA_STREAM_NAME=
