--- a/08-flink-java/nba-tampering-flink/pom.xml
+++ b/08-flink-java/nba-tampering-flink/pom.xml
@@ -111,6 +111,12 @@ under the License.
 			<version>1.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-runtime-web_2.12</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
+
 		<!-- Add logging framework, to produce console output when running in the IDE. -->
 		<!-- These dependencies are excluded from the application JAR by default. -->
 		<dependency>
